--- a/slider/index.html
+++ b/slider/index.html
@@ -28,14 +28,15 @@
     </div>
   </div>
   <div id="slide-bgs"> 
-  <img src="images/line.jpg"  alt="" title="" border="0" />
+  <img src="images/qgmap.jpg"  alt="" title="" border="0" />
    <img src="images/foodtruck.jpg"  alt="" title="" border="0" />
-    <img src="images/qgmap.jpg"  alt="" title="" border="0" /></div>
+    <img src="images/line.jpg"  alt="" title="" border="0" /></div>
   <div class="slide slide-0">
     <div class="foreground">&nbsp;</div>
     <div class="overlay"> <a href="#" title="quit the line">
-      <h1 class="small medium-next">Hungry? Do you really want to stand there?</h1>
-	  <h1 class="small medium-next">Just QikGrub and go!</h1>
+      <h1 class="small medium-next">Let the world taste your creations!</h1>
+      <h1 class="small medium-next">Only when you want to</h1>
+	  <h1 class="small medium-next">We put you on the map and much more!</h1>
     <!--  <span class="info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.vLorem Ipsum is simply dummy text of the printing and typesetting industry. </span> <span class="btn">View Details</span> </a> --> </div>
   </div>
   <div class="slide slide-1">
@@ -49,9 +50,8 @@
   <div class="slide slide-2">
     <div class="foreground">&nbsp;</div>
     <div class="overlay"> <a href="#" title="home chefs">
-      <h1 class="small medium-next">Let the world taste your creations!</h1>
-      <h1 class="small medium-next">Only when you want to</h1>
-	  <h1 class="small medium-next">We put you on the map and much more!</h1>
+      <h1 class="small medium-next">Hungry? Do you really want to stand there?</h1>
+	  <h1 class="small medium-next">Just QikGrub and go!</h1>
     <!--  <span class="info" >Lorem Ipsum is simply dummy text of the printing and typesetting industry.vLorem Ipsum is simply dummy text of the printing and typesetting industry. </span> <span class="btn">More Info</span> </a>  --> </div>
   </div>
    
