--- a/slider/index.html
+++ b/slider/index.html
@@ -44,7 +44,7 @@
     <div class="overlay"> <a href="#" title="food trucks">
       <h1 class="small medium-next">Food Trucks are covered too</h1>
       <h1 class="small medium-next">Be on the map wherever you go</h1>
-	  <h1 class="small medium-next">Spend less time on Orders and Transactions</h1>
+	  <h1 class="small medium-next">Less time on Ordering and Payments</h1>
     <!--  <span class="info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.vLorem Ipsum is simply dummy text of the printing and typesetting industry. </span> <span class="btn">View Details</span> </a> --> </div>
   </div>
   <div class="slide slide-2">
