--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </div>
   <div id="inner_main">
   <div id="home_contant">
-  <h1>Welcome&nbsp;to&nbsp;QikGrub (Patent Pending) - An on-demand, cashless food ordering platform</h1>
+  <h1>QikGrub (Patent Pending) - An on-demand, cashless food ordering platform</h1>
   <p align="justify">QikGrub is a mobile app that opens up an exclusive avenue of food choices to consumers. It also presents a unique opportunity for individuals who are good cooks. They can share their food with others and make additional income without having to invest in a store front or for that matter in any software, marketing and sales infrastructure. They also don't need to maintain any cash or have machines to accept payments. QikGrub showcases food from additional sources such as smaller vendors (Carryout & Takeaway), restaurants & food trucks (that move from place to place). </p>
   <p>QikGrub displays food choices across all types of vendors on a map clearly by distance so you can make your choices based where you may be heading. You can simply plan ahead and make your purchases. It gives great flexibility to the vendors so they can make themselves available on the map ONLY when they are ready to accept orders. Vendors get paid as soon as the order is placed. </p>
   <p>The app primarily targets people on the move and allows them to pick-up food or ensure it is ready when they arrive. Customers do not need to wait OR carry any cash to make smaller or larger purchases. QikGrub also features an ‘on-premise delivery’ model. The app is unique in its kind and can be adopted to many needs and contexts.</p>
