--- a/howitworks.html
+++ b/howitworks.html
@@ -138,11 +138,15 @@
       <table width="225px" border="0" cellpadding="0" cellspacing="0">
         <tr>
           <td width="35px" valign="top"><img src="images/phone.png" alt=""/></td>
+          <td width="190px">(603) 921-3077 (USA)</td>
+        </tr>
+        <tr>
+          <td width="35px" valign="top"><img src="images/phone.png" alt=""/></td>
           <td width="190px">040 40030952</td>
         </tr>
         <tr>
           <td valign="top"><img src="images/time.png" alt=""/></td>
-          <td>+919573027118</td>
+          <td>+91 9573027118</td>
         </tr>
         <tr>
           <td valign="top"><img src="images/message.png" alt=""/></td>
