--- a/contactus.html
+++ b/contactus.html
@@ -202,9 +202,9 @@
         <tr>
           <td valign="top"><img src="images/location.png" alt=""/></td>
           <td><div class="map-w"> <strong>Kriyative Edge</strong><br>
-              82 Kavuri Hills, <br>
-              Madhapur<br>
-              Hyderabad. Pin :500081 </div></td>
+              At JustBooks Library, <br>
+              SK Towers, Kondapur Road, Gachibowli<br>
+              Hyderabad. Pin :500032 </div></td>
         </tr>
       </table>
     </div>
