--- a/contactus.html
+++ b/contactus.html
@@ -94,9 +94,10 @@
         <div class="address">
           <p><strong>Address </strong></p>
           <strong style="color:#17a;">Kriyative Edge</strong><br>
-          <p>82, Kavuri Hills, <br>
+          <p>At JustBooks Library, <br>
+              SK Towers, Kondapur Road, Gachibowli<br>
             Madhapur, Hyderabad <br>
-            Pin :500081</p>
+            Pin :500032</p>
         </div>
       </div>
 	      <div class="right">
