--- a/contactus.html
+++ b/contactus.html
@@ -94,10 +94,10 @@
         <div class="address">
           <p><strong>Address </strong></p>
           <strong style="color:#17a;">Kriyative Edge</strong><br>
-          <p>At JustBooks Library, <br>
-              SK Towers, Kondapur Road, Gachibowli<br>
-            Madhapur, Hyderabad <br>
-            Pin :500032</p>
+          <p>#45B, BHEL Enclave, <br>
+              Akbar Road, Tarbund,<br>
+            Secunderabad <br>
+            Pin :500009</p>
         </div>
       </div>
 	      <div class="right">
@@ -203,9 +203,9 @@
         <tr>
           <td valign="top"><img src="images/location.png" alt=""/></td>
           <td><div class="map-w"> <strong>Kriyative Edge</strong><br>
-              At JustBooks Library, <br>
-              SK Towers, Kondapur Road, Gachibowli<br>
-              Hyderabad. Pin :500032 </div></td>
+              #45B, BHEL Enclave<br>
+              Akbar Road, Tarbund<br>
+              Secunderabad. Pin :500009 </div></td>
         </tr>
       </table>
     </div>
